# OpenGLNote

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ToyOpenGL.cpp  ToyOpenGL.hpp  main.cpp
src/shaders/: cubic.vs.glsl  forward.vs.glsl  singlecolor.fs.glsl  texture.fs.glsl  transform.vs.glsl
src/utils/: GLFWHandle.hpp  camera.cpp  camera.hpp  filesystem.hpp  gl_debug_output.cpp  shaders.hpp
